# Weather-Forecast-API

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  appearance.cpp  appearance.h  configparse.cpp  configparse.h  system_settings.cpp  weather_info.cpp  weather_info.h
